name:          fltkhs-reflex
version:       0.0.1

cabal-version: >=2.0
build-type:    Simple

----------------------------------------

synopsis:            reflex bindings for fltkhs 
category:            UI,Graphics
description: 

homepage:            http://github.com/sboosali/fltkhs-reflex-host#readme
author:              Spiros Boosalis, Aditya Siram
maintainer:          samboosalis@gmail.com
copyright:           2018 Spiros Boosalis
license:             GPL-2
license-file:        LICENSE

----------------------------------------

-- custom-setup
--   setup-depends:
--     base >= 4.5 && < 4.11,
--     Cabal < 1.25,
--     filepath,
--     directory

----------------------------------------

source-repository head
  type: git
  location: http://github.com/sboosali/fltkhs-reflex-host

----------------------------------------

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

----------------------------------------

-- common static-link-flags

--   if os(windows)
--    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
--   if os(darwin)
--    ghc-Options: "-optl-Wl,-lfltkc"
--   if !os(darwin) && !os(windows)
--    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

----------------------------------------

library

  Hs-Source-Dirs: sources/

  exposed-modules:
    Reflex.FLTK.Example
 
--  other-modules:
 
  build-depends:
      base                 >= 4.6   && <5.0
    , spiros
    , fltkhs >= 0.5
    , text >= 1.2.2.0
    , reflex >= 0.4.0
    , mtl >= 2.2.1
    , transformers >= 0.4.2
    , dependent-sum >= 0.3.2
    , ref-tf >= 0.4
 
  default-language:    Haskell2010
  ghc-options:
   -Wall
 -- disable
   -fno-warn-unticked-promoted-constructors
 -- enable
   -fwarn-incomplete-uni-patterns
   -fwarn-incomplete-record-updates
   -fwarn-identities
   -fwarn-missing-fields
 
  default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                      DeriveFunctor DeriveFoldable DeriveTraversable
                      LambdaCase EmptyCase TypeOperators PostfixOperators
                      ViewPatterns BangPatterns KindSignatures
                      NamedFieldPuns RecordWildCards TupleSections
                      MultiWayIf DoAndIfThenElse EmptyDataDecls
                      MultiParamTypeClasses FlexibleContexts FlexibleInstances
                      TypeFamilies FunctionalDependencies
                      ScopedTypeVariables StandaloneDeriving PackageImports 

--  import: static-link-flags

  -- if os(windows)
  --  ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  -- if os(darwin)
  --  ghc-Options: "-optl-Wl,-lfltkc"
  -- if !os(darwin) && !os(windows)
  --  ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

---------------------------

Executable fltkhs-reflex-example

  Main-Is:        Main.hs
  Hs-Source-Dirs: executables

  Build-Depends:
      base == 4.*
    , fltkhs-reflex

  default-language: Haskell2010
  ghc-Options: -Wall

  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  else
     ghc-Options: -O2

--  import: static-link-flags

  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

---------------------------

-- Executable fltkhs-reflex-host

--   Main-Is: reflex-host.hs
--   Hs-Source-Dirs: executables

--   Build-Depends: base == 4.*,
--                  fltkhs >= 0.5.3.4,
--                  text >= 1.2.2.0,
--                  reflex >= 0.4.0,
--                  mtl >= 2.2.1,
--                  transformers >= 0.4.2,
--                  dependent-sum >= 0.3.2,
--                  ref-tf >= 0.4

--   default-language: Haskell2010
--   ghc-Options: -Wall

--   if impl(ghc >= 7.10) && flag(FastCompile)
--      ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
--   else
--      ghc-Options: -O2

-- --  import: static-link-flags

--   if os(windows)
--    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
--   if os(darwin)
--    ghc-Options: "-optl-Wl,-lfltkc"
--   if !os(darwin) && !os(windows)
--    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

----------------------------------------